# autowire-di

./: LICENSE  README.md  pyproject.toml
examples/: 01_basic_autowiring.py  02_scopes.py  03_config_injection.py  04_modules.py  05_aop_interceptors.py  06_async_support.py  07_assisted_injection.py  08_advanced_features.py  09_distributed_computing.py
src/autowire_di/: __init__.py  container.py  interceptor.py  markers.py  module.py  providers.py  recipe.py  registry.py  resolver.py  scope.py  types.py  validator.py
src/python_di/: __init__.py  container.py  markers.py  module.py  recipe.py  registry.py  resolver.py  scope.py  types.py  validator.py
tests/: test_advanced.py  test_assisted.py  test_assisted_injection.py  test_async.py  test_auto_wiring.py  test_container.py  test_eager_singleton.py  test_injectable.py  test_interceptor.py  test_map_bindings.py  test_modules.py  test_private_module.py  test_provider_injection.py  test_scopes.py  test_validation.py
