[project]
name = "autowire-di"
version = "0.1.1"
description = "A Pythonic dependency injection framework with auto-wiring, scoped lifecycles, and async support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autowire_di"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.0",
    "ruff>=0.9",
    "cloudpickle>=3.1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100
